Fix gradient initialization and correct batch length usage in epoch loop.

--- a/NeuralNetwork.ipynb
+++ b/NeuralNetwork.ipynb
@@ -1155,6 +1155,7 @@
         "# Iterate over epochs\n",
         "for epoch in range(num_epochs):\n",
         "    epoch_loss = 0\n",
+        "    total_grad_w = np.zeros_like(W)\n",
         "\n",
         "    # Iterating over batches\n",
         "    for i in range(0, len(X1), batch_size):\n",
@@ -1179,10 +1180,10 @@
         "        total_grad_w += batch_grad_w\n",
         "\n",
         "    # Updating the weights using the accumulated gradients\n",
-        "    W -= learning_rate * total_grad_w / len(range(0, len(x1), batch_size))\n",
+        "    W -= learning_rate * total_grad_w / len(range(0, len(X1), batch_size))\n",
         "\n",
         "    # Calculating average loss for the epoch\n",
-        "    avg_epoch_loss = epoch_loss / len(range(0, len(x1), batch_size))\n",
+        "    avg_epoch_loss = epoch_loss / len(range(0, len(X1), batch_size))\n",
         "    epoch_losses.append(avg_epoch_loss)\n",
         "\n",
         "# Plotting the loss trend\n",
